# Basic-C-learn

./: .clang-format  .gitignore  test.cpp
AddressBook/source/: AddressBookSystem.cpp
STL/Base/: defin.cpp  vectoerl  vector_01.cpp  vector_02  vector_02.cpp  vector_03  vector_03.cpp
STL/algorithm/: accumulate  accumulate.cpp  (+40 more)
headfile/: point.h
mk_system/: Makefile  compile_commands.json
reservation/: CMakeLists.txt  order.txt  student.txt
reservation/include/: Identity.h  computerRoom.h  globalFile.h  manager.h  orderFile.h  path_utils.h  student.h  teacher.h
reservation/src/: main.cpp  manager.cpp  orderFile.cpp  student.cpp  teacher.cpp
speech/: CMakeLists.txt
stage1/: array1.cpp  find.cpp  guess_number.cpp  max_element.cpp  struct_case.cpp  struct_case_sort.cpp  switch.cpp  ternary_operator.cpp
stage2/: class_01.cpp  class_02.cpp  class_03.cpp  class_04.cpp  class_05.cpp  class_case_06.cpp  class_case_07.cpp  code_area  file_01.cpp  file_02.cpp  file_03.cpp  file_04.cpp  friend_01.cpp  friend_02.cpp  friend_03.cpp  func_01.cpp  func_02.cpp  func_03.cpp  func_04.cpp  gloabl_area.cpp  heap_area.cpp  inheritance_01.cpp  inheritance_02.cpp  inheritance_03.cpp  inheritance_04.cpp  inheritance_05.cpp  inheritance_06.cpp  inheritance_07.cpp  inheritance_08.cpp  new_operator.cpp  object_01.cpp  object_02.cpp  object_03.cpp  object_04.cpp  object_05.cpp  object_06.cpp  object_07.cpp  object_08.cpp  object_09.cpp  object_10.cpp  (+24 more)
stage3/: boss.cpp  boss.h  employee.cpp  employee.h  main.cpp  manager.cpp  manager.h  worker.h  workerManager.cpp  workerManager.h
(+247 files in other folders)
